--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,103 @@
-
-.navigation {
-  box-sizing: border-box;
-  background-color: #3587A4;
-  overflow: auto;
-  padding: 18px 50px;
-  position: relative;
-  top: 0;
-  width: 100%;
-  z-index: 999;
-  text-align: center;
-}
-
-ul {
+html {
+  font-size: 16px;
+  margin: 0;
   padding: 0;
-  margin: 0;
-}
-
-li {
-  color: #FFF;
-  display: inline-block;
-  font-family: 'Oxygen', sans-serif;
-  font-weight: 300;
-  letter-spacing: 2px;
-  margin: 0;
-  padding: 20px 18px 10px 18px;
-  text-transform: uppercase;
 }
 
 body {
-  background: #EEE;
-  margin: 0;
+  font-family: "Open Sans", sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+strong {
+  font-weight: bold;
+}
+
+.image-container {
+  overflow: hidden;
+}
+
+.image-container img {
+  display: block;
+  max-width: 100%;
+}
+
+/* Header */
+
+header {
+  display: flex;
+  align-items: center;
+  padding: 0 2rem;
+  background-color: black;
+  border-radius: 5px;
+}
+
+#logo-small {
+  width: 100px;
+}
+
+header .logo-small {
+  display: none;
+}
+
+header .logo-small,
+header .logo-big {
+flex-grow: 1;
+}
+
+nav ul {
   padding: 0;
+  display: inline-block;
+}
+
+nav li {
+  color: #FFF;
+  display: inline-block;
+  font-family: 'Oxygen', sans-serif;
+  font-weight: 400;
+  letter-spacing: 2px;
+  padding: 0px 10px;
+  text-transform: uppercase;
+}
+
+nav {
+  text-align: center;
+  padding: 5px;
+}
+
+@media only screen and (max-width: 1000px) {
+  header .logo-big {
+    display: none;
+  }
+
+  header .logo-small {
+      display: block;
+  }
+
+  html {
+      font-size: 14px;
+}
+}
+
+@media only screen and (max-width: 600px) {
+  header {
+    flex-direction: column;
+  }
+
+  header .logo-small {
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+  }
+
+  #logo-small {
+      width: 150px;
+  }
+
+  nav li {
+      padding: 10px 50px;
+  }
 }
