--- a/resources/style.css
+++ b/resources/style.css
@@ -129,6 +129,19 @@ header {
     width: 100%;
 }
 
+#call {
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+
+  }
+
 .break { 
 }
 
@@ -157,7 +170,7 @@ header {
         width: 100%;
     }
     .bannertext {
-        margin-top: 100px;
+        margin-top: 200px;
         text-align: center;
         width: 100%;
         left: auto;
@@ -167,6 +180,9 @@ header {
     }
     .bannertext h4 {
         font-size: 20px;
+    }
+    header {
+        height: 750px;
     }
     
   }
