--- a/resources/style.css
+++ b/resources/style.css
@@ -58,10 +58,10 @@ nav {
 }
 
 #logo {
-    height: 80px;
+    height: 60px;
     width: auto;
     margin-top: 20px;
-    margin-right: 8%;
+    margin-right: 5%;
     right: 50px;
 }
 
@@ -72,7 +72,7 @@ header {
 
 /* banner */
 .bannerimg {
-    background-image: linear-gradient( rgba(1, 23, 85, 0.8), rgba(1, 23, 85, 0.8)), url("images/family.jpg");
+    background-image: linear-gradient( rgba(129, 58, 0, 0.9), rgba(1, 38, 68, 0.9)), url("images/family.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 600px;
@@ -128,7 +128,7 @@ header {
 
 #call {
     border: none;
-    background-color: rgb(1, 23, 85);
+    background-color: rgb(230, 73, 0);
     padding: 15px 32px;
     text-align: center;
     display: inline-block;
@@ -137,7 +137,7 @@ header {
     border: 2px solid white;
     border-radius: 10px;
     position: absolute;
-    margin-top: 280px;
+    margin-top: 300px;
     left: 50%;
     transform: translate(-50%, 0);
     display: none;
@@ -164,7 +164,7 @@ header {
     #logo {
         margin-right: 0px;
         margin-top: 30px;
-        height: 100px;
+        height: 70px;
     }
     .flex-430px {
         display: flex;
@@ -176,6 +176,11 @@ header {
     }
     #nav-link-container li {
         display: block;
+    }
+    #nav-link-container a {
+        font-size: 20px;
+        line-height: 32px;
+        font-weight: 400;
     }
     .bannerimg {
         width: 100%;
