--- a/resources/style.css
+++ b/resources/style.css
@@ -16,6 +16,32 @@ body {
 
 h2 {
     font-family: 'Playfair Display', serif;
+    font-size: 60px;
+}
+
+h3 {
+    font-family: 'Playfair Display', serif;
+    font-size: 40px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+h4 {
+    font-weight: 400;
+    line-height: 30px;
+    font-size: 20px;
+}
+
+h5 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+p {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    text-align: justify;
 }
 
 /* Flex Universal */
@@ -65,6 +91,7 @@ nav {
     right: 50px;
 }
 
+/* header */
 header {
     height: 600px;
     width: 100%;
@@ -93,16 +120,6 @@ header {
     color: white;
     left: 15%;
     top: 150px;
-}
-
-.bannertext h2 {
-    font-size: 60px;
-}
-
-.bannertext h4 {
-    font-weight: 400;
-    line-height: 30px;
-    font-size: 20px;
 }
 
 .video-container {
@@ -148,10 +165,35 @@ header {
     text-decoration: none;
 }
 
-.break {
-    display: static;
-}
+  /* Section 1 */
 
+  .figure {
+    width: 40%;
+    margin-left:8%;
+    margin-right: 5%;
+    margin-top: -30px;
+    margin-bottom: 50px;
+  }
+
+  .article {
+    width: 40%;
+    margin-right: 10%;
+  }
+
+  .shadow {
+    box-shadow: -50px 50px rgba(1, 38, 68, 0.9);
+  }
+
+  .section {
+    width: 100%;
+    flex-direction: row;
+  }
+
+  #boatrepairimg {
+    width: 100%;
+  }
+
+  /* Mobile */
 
   @media screen and (max-width: 600px) {
     .nav-container {
@@ -159,7 +201,7 @@ header {
     }
     .nav-container a {
         font-size: 18px;
-        margin-right: 10px;
+        margin: 10px;
     }
     #logo {
         margin-right: 0px;
@@ -184,7 +226,7 @@ header {
     }
     .bannerimg {
         width: 100%;
-        height: 700px;
+        height: 720px;
     }
     .bannertext {
         margin-top: 190px;
@@ -199,7 +241,7 @@ header {
         font-size: 20px;
     }
     header {
-        height: 700px;
+        height: 500px;
     }
     #call {
         display: block;
@@ -210,5 +252,19 @@ header {
   @media screen and (max-width: 1000px) {
     .video-container {
         display: none;
+    }
+    .section {
+        flex-direction: column;
+        display: block;
+    }
+    .figure {
+        width: 84%;
+    }
+    .shadow {
+        box-shadow: -20px 20px rgba(1, 38, 68, 0.9);
+    }
+    .article {
+        width: 84%;
+        margin: 0 auto;
     }
   }
