--- a/resources/style.css
+++ b/resources/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: white;
+    background-color: rgba(1, 38, 68, 0.5);
     font-family: 'Montserrat', sans-serif;
     font-size: 22px;
     color: black;
@@ -87,13 +87,13 @@ nav {
     height: 60px;
     width: auto;
     margin-top: 20px;
-    margin-right: 5%;
+    margin-right: 5%vw;
     right: 50px;
 }
 
 /* header */
 header {
-    height: 600px;
+    height: 490px;
     width: 100%;
 }
 
@@ -119,7 +119,7 @@ header {
     width: 400px;
     color: white;
     left: 15%;
-    top: 150px;
+    top: 170px;
 }
 
 .video-container {
@@ -143,21 +143,24 @@ header {
     top: -50px;
 }
 
-#call {
+button {
     border: none;
     background-color: rgb(230, 73, 0);
     padding: 15px 32px;
     text-align: center;
-    display: inline-block;
+    display: block;
     font-size: 20px;
     cursor: pointer;
-    border: 2px solid white;
     border-radius: 10px;
+}
+
+#call {
     position: absolute;
     margin-top: 300px;
     left: 50%;
     transform: translate(-50%, 0);
     display: none;
+    border: 2px solid white;
   }
 
 #call a {
@@ -166,32 +169,61 @@ header {
 }
 
   /* Section 1 */
+    .section {
+    width: 100%;
+    flex-direction: row;
+    margin-top: 120px;
+    }
 
-  .figure {
+   .figureleft {
+    margin-left: 10%;
+    margin-right: 2%;
     width: 40%;
-    margin-left:8%;
-    margin-right: 5%;
-    margin-top: -30px;
-    margin-bottom: 50px;
-  }
+    
+    }
 
-  .article {
-    width: 40%;
+    .articleright {
+    margin-top: 30px;
+    margin-left: 2%;
     margin-right: 10%;
-  }
+    width: 36%
+    }
+
+    .articleleft {
+    margin-top: 50px;
+    margin-left: 8%;
+    margin-right: 2%;
+    width: 36%;
+    }
+
+    .figureright {
+    margin-left: 6%;
+    margin-right: 10%;
+    width: 40%;
+    border: 2px solid white;
+    }
 
   .shadow {
     box-shadow: -50px 50px rgba(1, 38, 68, 0.9);
   }
 
-  .section {
-    width: 100%;
-    flex-direction: row;
-  }
-
   #boatrepairimg {
     width: 100%;
   }
+
+  .button2 {
+    padding: 8px 20px;
+    outline: 1px solid white;
+    margin: 0 auto;
+    margin-top: 20px;
+  }
+
+  .button2 a {
+    color:white;
+    text-decoration: none;
+  }
+
+/* Section 2 */
 
   /* Mobile */
 
@@ -226,7 +258,7 @@ header {
     }
     .bannerimg {
         width: 100%;
-        height: 720px;
+        height: 740px;
     }
     .bannertext {
         margin-top: 190px;
@@ -241,7 +273,7 @@ header {
         font-size: 20px;
     }
     header {
-        height: 500px;
+        height: 400px;
     }
     #call {
         display: block;
@@ -255,16 +287,37 @@ header {
     }
     .section {
         flex-direction: column;
-        display: block;
+        border: 2px solid white;
     }
-    .figure {
-        width: 84%;
+    .fig2nd {
+        flex-direction: column-reverse;
     }
     .shadow {
         box-shadow: -20px 20px rgba(1, 38, 68, 0.9);
     }
-    .article {
-        width: 84%;
-        margin: 0 auto;
+    .figureleft {
+    margin-left: 10%;
+    margin-right: 10%;
+    width: 80%;
+    }
+    
+    .articleright {
+    margin-top: 50px;
+    margin-left: 10%;
+    margin-right: 10%;
+    width: 80%
+    }
+
+    .articleleft {
+    margin-top: 30px;
+    margin-left: 10%;
+    margin-right: 10%;
+    width: 80%;
+    }
+
+    .figureright {
+    margin-left: 10%;
+    margin-right: 10%;
+    width: 80%;
     }
   }
