--- a/resources/style.css
+++ b/resources/style.css
@@ -11,7 +11,6 @@ body {
     font-size: 22px;
     color: white;
     width: 100%;
-    height: 100%
 }
 
 h2 {
@@ -93,7 +92,7 @@ nav {
 
 /* header */
 header {
-    height: 490px;
+    height: 590px;
     width: 100%;
 }
 
@@ -102,8 +101,8 @@ header {
     background-image: linear-gradient( rgba(129, 58, 0, 0.9), rgba(1, 38, 68, 0.9)), url("images/family.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    height: 600px;
-    width: 75%;
+    height: 700px;
+    width: 100%;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -118,7 +117,7 @@ header {
     flex-wrap: nowrap;
     width: 400px;
     color: white;
-    left: 15%;
+    left: 10%;
     top: 170px;
 }
 
@@ -130,7 +129,7 @@ header {
     height: 350px;
     overflow:hidden;
     position:absolute;
-    top: 130px;
+    top: 190px;
     right: 2%;
 }
 
@@ -145,7 +144,7 @@ header {
 
 button {
     border: none;
-    background-color: rgb(230, 73, 0);
+    background-color: rgb(207, 66, 0);
     padding: 15px 32px;
     text-align: center;
     display: block;
@@ -156,11 +155,11 @@ button {
 
 #call {
     position: absolute;
-    margin-top: 300px;
+    margin-top: 380px;
     left: 50%;
     transform: translate(-50%, 0);
     display: none;
-    border: 2px solid white;
+    border: 1px solid white;
   }
 
 #call a {
@@ -168,28 +167,84 @@ button {
     text-decoration: none;
 }
 
-  /* Section 1 */
+    /* Dropdown */
+.dropdown {
+    position: relative;
+    display: inline-block;
+    border: 2px solid white;
+}
+
+.dropbtn {
+    margin: 0 auto;
+    margin-top: 30px;
+    border: 1px solid white;
+    color: white;
+    background-color: rgba(1, 38, 68, 0.9);
+    padding: 15px 60px;
+}
+
+.dropbtn:active {
+    background-color: rgb(207, 66, 0);
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    min-width: 140px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    text-align:center;
+    top: 372px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 10px;
+}
+
+.dropdown-content a {
+    border: 1px solid white;
+    color: white;
+    background-color: rgba(1, 38, 68, 0.9);
+    padding: 14px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    border-radius: 10px;
+    font-size: 20px;
+}
+
+.dropdown-content a:active {
+    background-color: rgb(207, 66, 0);
+}
+
+.dropdown.show .dropdown-content {
+    display: block;
+}
+
+#nav2 {
+    display: none;
+}
+
+
+  /* Section */
+
     .section {
     width: 100%;
     flex-direction: row;
-    margin-top: 100px;
-    border: 2px solid white;
+    margin-top: 150px;
     }
 
     .pic {
-        width: 100%;
-      }
+    width: 100%;
+    }
 
    .figureleft {
     margin: auto 1% auto 4%;
-    border: 2px solid yellow;
     width: 50%;
     }
 
     .articleright {
     width: 40%;
     margin: auto 4% auto 1%;
-    border: 2px solid yellow;
     }
 
     .articleleft {
@@ -202,33 +257,60 @@ button {
     width: 50%;
     }
 
-  .shadow {
-    box-shadow:  rgba(61, 61, 61, 0.9);
-  }
+    .figurerightshadow {
+    margin: auto 4% auto 3%;
+    width: 50%;
+    }
 
-  .pictall {
+    .pictall {
     display: block;
     margin: 0 auto;
     max-height: 400px;
-  }
+    }
 
-  .button2 {
+    .button2 {
     padding: 8px 20px;
     outline: 1px solid white;
     margin: 0 auto;
     margin-top: 20px;
-  }
+    }
 
-  .button2 a {
+    .button2 a {
     color:white;
     text-decoration: none;
-  }
+    }
 
-/* Section 2 */
+    .shadow {
+        box-shadow: -30px 30px rgba(1, 38, 68, 0.9);
+    }
+
+/* Footer */
+
+    footer {
+        background-image: linear-gradient( rgba(129, 58, 0, 0.9), rgba(1, 38, 68, 0.9));
+        margin-top: 100px;
+        text-align: center;
+    }
+
+    .contact {
+        margin: 5% auto;
+    }
+
+    .contact img {
+        width: 50%;
+        max-width: 800px;
+    }
+
+    .contact p {
+        text-align: center;
+    }
 
   /* Mobile */
 
   @media screen and (max-width: 600px) {
+    .dropdown {
+        display: contents;
+    }
     .nav-container {
         flex-direction: column;
     }
@@ -248,6 +330,7 @@ button {
     }
     #nav-link-container {
         margin-top: 30px;
+        display: none;
     }
     #nav-link-container li {
         display: block;
@@ -262,13 +345,13 @@ button {
         height: 740px;
     }
     .bannertext {
-        margin-top: 190px;
+        margin-top: 100px;
         text-align: center;
         width: 100%;
         left: auto;
     }
     .bannertext h2 {
-        font-size: 35px;
+        font-size: 50px;
     }
     .bannertext h4 {
         font-size: 20px;
@@ -282,12 +365,18 @@ button {
     h3 {
         font-size: 50px;
     }
+    #nav2 {
+        display: block;
+    }
+  }
+
+  @media screen and (max-width: 1000px) {
+  .video-container {
+    display: none;
+}
   }
 
   @media screen and (max-width: 1200px) {
-    .video-container {
-        display: none;
-    }
     .section {
         flex-direction: column;
     }
@@ -313,7 +402,13 @@ button {
         width: 90%;
         margin: auto 5%;
     }
+    .figurerightshadow {
+        margin: auto 5%;
+        width: 90%;
+    }
     article h5 {
         display:none;
     }
   }
+
+
