--- a/resources/style.css
+++ b/resources/style.css
@@ -53,8 +53,7 @@ p {
 }
 
 /* navbar/logo */
-nav {
-    
+nav { 
     position: static;
     top: 0;
 }
@@ -107,9 +106,6 @@ header {
     background-size: cover;
     height: 700px;
     width: 100%;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     position: absolute;
     top: -30px;
     z-index: -1
@@ -125,17 +121,22 @@ header {
 }
 
 .toppage {
-    background-color: red;
+    margin-top: 100px;
+    flex-wrap: nowrap;
     width: 100%;
 }
 
 .bannerpage {
-    width: 40%;
+    width: 50%;
+    margin: auto 1% auto 5%;
+    text-align: center;
 }
 
 .topimg {
-    width: 40%;;
-    margin:;
+    width: 38%;
+    max-width: 600px;
+    margin: auto 5% auto 1%;
+    
 }
 
 .bannerpage h4 {
@@ -403,6 +404,13 @@ button {
     #nav2 {
         display: block;
     }
+    .bannerpage h2 {
+        font-size: 60px;
+    }
+    .toppage {
+        margin-top: -30px;
+        margin-bottom: -300px;
+    }
   }
 
   @media screen and (max-width: 1000px) {
@@ -443,6 +451,17 @@ button {
     }
     article h5 {
         display:none;
+    }
+    .topimg {
+        display:none;
+    }
+    .bannerpage {
+            width: 100%;
+            text-align: center;
+            margin: 50px auto 0 auto;   
+    }
+    .pagehead {
+        margin-bottom: 200px;
     }
   }
 
