--- a/resources/linked/style.css
+++ b/resources/linked/style.css
@@ -101,7 +101,7 @@ header {
 
 /* banner */
 .bannerimg {
-    background-image: linear-gradient( rgba(129, 58, 0, 0.9), rgba(1, 38, 68, 0.9)), url("images/family.jpg");
+    background-image: linear-gradient( rgba(129, 58, 0, 0.9), rgba(1, 38, 68, 0.9)), url("/resources/images/family.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 700px;
@@ -339,13 +339,23 @@ button {
 
 .carousel {
     width: 80%;
-    height: 70%;
+    max-height: 70%;
     margin: 0 auto;
 }
 
 .carousel h2 {
     text-align: center;
     margin-bottom: 40px;
+}
+
+.captiontitle {
+    font-weight: bold;
+    font-size: 25px;
+}
+
+.caption {
+    text-align: center;
+    font-size: 20px;
 }
 
 /* Article */
@@ -497,6 +507,10 @@ article ol {
     .section:nth-of-type(1) {
         margin-top: 240px;
     }
+    .carousel {
+        width: 90%;
+        max-height: 80%;
+    }
     }
     
 
@@ -565,6 +579,9 @@ article ol {
             width: 100%;
             text-align: center;
             margin: 50px auto 0 auto;   
+    }
+    .carousel-caption {
+        display:none;
     }
     
   }
