--- a/resources/linked/style.css
+++ b/resources/linked/style.css
@@ -111,6 +111,18 @@ header {
     z-index: -1
 }
 
+.bannerimgpainting {
+    background-image: linear-gradient( rgba(129, 58, 0, 0.9), rgba(1, 38, 68, 0.9)), url("/resources/images/boatpainting/boat painting.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 700px;
+    width: 100%;
+    position: absolute;
+    top: -30px;
+    z-index: -1
+}
+
+
 .bannertext {
     display: inline-block;
     position: absolute;
@@ -530,6 +542,9 @@ article ol {
     }
     .pagesection:nth-of-type(1) {
         margin-top:200px;
+    }
+    .bannerimgpainting {
+        height: 800px;
     }
     }
     
