--- a/resources/linked/style.css
+++ b/resources/linked/style.css
@@ -101,7 +101,18 @@ header {
 
 /* banner */
 .bannerimg {
-    background-image: linear-gradient( rgba(129, 58, 0, 0.9), rgba(1, 38, 68, 0.9)), url("/resources/images/family.jpg");
+    background-image: linear-gradient( rgba(129, 58, 0, 0.9), rgba(1, 38, 68, 0.9)), url("/resources/images/background/boat repair 2.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 700px;
+    width: 100%;
+    position: absolute;
+    top: -30px;
+    z-index: -1
+}
+
+.bannerimgrepair {
+    background-image: linear-gradient( rgba(129, 58, 0, 0.9), rgba(1, 38, 68, 0.9)), url("/resources/images/background/boat repair 2.webp");
     background-repeat: no-repeat;
     background-size: cover;
     height: 700px;
@@ -112,7 +123,29 @@ header {
 }
 
 .bannerimgpainting {
-    background-image: linear-gradient( rgba(129, 58, 0, 0.9), rgba(1, 38, 68, 0.9)), url("/resources/images/boatpainting/boat painting.jpg");
+    background-image: linear-gradient( rgba(129, 58, 0, 0.9), rgba(1, 38, 68, 0.9)), url("/resources/images/background/boat painting.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 700px;
+    width: 100%;
+    position: absolute;
+    top: -30px;
+    z-index: -1
+}
+
+.bannerimgfiberglass {
+    background-image: linear-gradient( rgba(129, 58, 0, 0.9), rgba(1, 38, 68, 0.9)), url("/resources/images/background/BoatFiberglass.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 700px;
+    width: 100%;
+    position: absolute;
+    top: -30px;
+    z-index: -1
+}
+
+.bannerimggelcoat {
+    background-image: linear-gradient( rgba(129, 58, 0, 0.9), rgba(1, 38, 68, 0.9)), url("/resources/images/background/GelcoatRepair.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 700px;
@@ -163,10 +196,10 @@ header {
     z-index: 2;
     min-width: 500px;
     width: 50%;
-    height: 350px;
+    height: 450px;
     overflow:hidden;
     position:absolute;
-    top: 190px;
+    top: 160px;
     right: 2%;
 }
 
@@ -174,9 +207,7 @@ header {
     width:100%;
     min-height: 100%;
     object-fit: contain;
-    position: relative;
-    bottom: 0;
-    top: -50px;
+    position: relative; 
 }
 
 button {
@@ -543,7 +574,7 @@ article ol {
     .pagesection:nth-of-type(1) {
         margin-top:200px;
     }
-    .bannerimgpainting {
+    .bannerimgpainting, .bannerimgrepair, .bannerimggelcoat, .bannerimgfiberglass, .bannerimgbrightwork, .bannerimgconsulting {
         height: 800px;
     }
     }
