--- a/resources/linked/style.css
+++ b/resources/linked/style.css
@@ -207,7 +207,7 @@ header {
     width:100%;
     min-height: 100%;
     object-fit: contain;
-    position: relative; 
+    position: relative;
 }
 
 button {
@@ -389,6 +389,10 @@ button {
     width: 80%;
     max-height: 70%;
     margin: 0 auto;
+}
+
+.carousel-inner {
+    border: 10px solid rgba(1, 38, 68, 0.5);
 }
 
 .carousel h2 {
@@ -576,6 +580,9 @@ article ol {
     }
     .bannerimgpainting, .bannerimgrepair, .bannerimggelcoat, .bannerimgfiberglass, .bannerimgbrightwork, .bannerimgconsulting {
         height: 800px;
+    }
+    .carousel-inner {
+        border: none;
     }
     }
     
