--- a/resources/linked/style.css
+++ b/resources/linked/style.css
@@ -155,6 +155,17 @@ header {
     z-index: -1
 }
 
+.bannerimgvarnishing {
+    background-image: linear-gradient( rgba(129, 58, 0, 0.9), rgba(1, 38, 68, 0.9)), url("/resources/images/brightwork/billickbrightwork/Maryland Brightwork Service 4.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 700px;
+    width: 100%;
+    position: absolute;
+    top: -30px;
+    z-index: -1
+}
+
 
 .bannertext {
     display: inline-block;
@@ -578,7 +589,7 @@ article ol {
     .pagesection:nth-of-type(1) {
         margin-top:200px;
     }
-    .bannerimgpainting, .bannerimgrepair, .bannerimggelcoat, .bannerimgfiberglass, .bannerimgbrightwork, .bannerimgconsulting {
+    .bannerimgpainting, .bannerimgrepair, .bannerimggelcoat, .bannerimgfiberglass, .bannerimgvarnishing, .bannerimgconsulting {
         height: 800px;
     }
     .carousel-inner {
