--- a/resources/linked/style.css
+++ b/resources/linked/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: rgba(1, 38, 68, 0.9);
+    background-color: rgba(0, 22, 37, 0.9);
     font-family: 'Montserrat', sans-serif;
     font-size: 22px;
     color: white;
@@ -53,15 +53,19 @@ p {
 }
 
 /* navbar/logo */
-nav { 
-    position: static;
-    top: 0;
-}
+
 
 .nav-container {
-    justify-content: space-between;
+    width: 100%;
     align-items: center;
     flex-direction: row-reverse;
+}
+
+#logo {
+    height: 60px;
+    width: auto;
+    margin-top: 20px;
+    margin-right: 30px; 
 }
 
 #nav-link-container {
@@ -85,13 +89,7 @@ nav {
     font-weight: 600;
 }
 
-#logo {
-    height: 60px;
-    width: auto;
-    margin-top: 20px;
-    margin-right: 30px;
-    
-}
+
 
 /* header */
 header {
@@ -166,6 +164,16 @@ header {
     z-index: -1
 }
 
+.bannerimgconsulting {
+    background-image: linear-gradient( rgba(129, 58, 0, 0.8), rgba(1, 38, 68, 0.8)), url("/resources/images/consulting/marina consultant.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 700px;
+    width: 100%;
+    position: absolute;
+    top: -30px;
+    z-index: -1
+}
 
 .bannertext {
     display: inline-block;
@@ -353,7 +361,7 @@ button {
     .pictall {
     display: block;
     margin: 0 auto;
-    max-height: 400px;
+    max-height: 445px;
     }
 
     .button2 {
@@ -439,7 +447,7 @@ article h4, .imgbox h4 {
 }
 
 article .ol {
-    font-size: 25px;
+    font-size: 20px;
     text-align: center;
     margin-left: 10%;
     margin-right: 10%;
@@ -452,21 +460,26 @@ article ol {
 }
 
 .paragraph {
+    font-family: 'Montserrat';
     margin-left: 10%;
     margin-right: 10%;
 }
 
 .paragraph li {
     font-size: 20px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 80px;
+    margin-bottom: 70px;
     text-align: justify;
 }
 
+.paragraph ul {
+
+}
+
 .sublist {
-    margin-left: 20px;
-    margin-top: 10px!important;
-    margin-bottom: 10px!important;
+    margin-left: 30px;
+    margin-top: 20px!important;
+    margin-bottom: 30px!important;
 }
 
 .boldp {
