--- a/resources/linked/style.css
+++ b/resources/linked/style.css
@@ -66,6 +66,7 @@ p {
     width: auto;
     margin-top: 20px;
     margin-right: 30px; 
+
 }
 
 #nav-link-container {
@@ -102,7 +103,7 @@ header {
     background-image: linear-gradient( rgba(129, 58, 0, 0.8), rgba(1, 38, 68, 0.8)), url("/resources/images/background/boat repair 2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    height: 700px;
+    height: 750px;
     width: 100%;
     position: absolute;
     top: -30px;
@@ -168,7 +169,7 @@ header {
     background-image: linear-gradient( rgba(129, 58, 0, 0.8), rgba(1, 38, 68, 0.8)), url("/resources/images/consulting/marina consultant.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    height: 700px;
+    height: 695px;
     width: 100%;
     position: absolute;
     top: -30px;
@@ -257,6 +258,14 @@ button {
     border: 1px solid white;
   }
 
+  .callindex {
+    margin-top: 450px!important;
+  }
+
+  .callconsulting {
+    margin-top: 330px!important;
+  }
+
 #call a {
     color: white;
     text-decoration: none;
@@ -283,15 +292,11 @@ button {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     text-align:center;
-    top: 392px;
+    top: 237px;
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 10px;
 }
-
-.dropdown-content2 {
-    top: 237px;
-    }
 
 .dropdown-content a {
     border: 1px solid white;
@@ -549,10 +554,10 @@ article ol {
     }
     .bannerimg {
         width: 100%;
-        height: 800px;
+        height: 820px;
     }
     .bannertext {
-        margin-top: 100px;
+        margin-top: 80px;
         text-align: center;
         width: 100%;
         left: auto;
